--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,7 @@ rvm:
   - jruby-18mode
   - jruby-19mode
   - jruby-head
-  - rbx-18mode
-  - rbx-19mode
+  - rbx
 matrix:
   allow_failures:
     - rvm: ruby-head
